@@ -1,5 +1,11 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/23/13: Rotatevol has an option to rotate by the inverse of the specified
+angles.
+
+6/23/13: Made beadtrack exit with error if a contour has two points on a view,
+just like Tiltalign does.
+
 6/22/13: IMOD_4-5-8 and IMOD_4-6-23
 6/22/13: Placed all of eTomo's initialization into the Swing event loop in
 order make eTomo work with Java for Mac 1.6.0_51 (update 16) (In 4.5).
